tests/paczka1/small_fuzzy/70804056.err
Error in line 2: Ne1psgsNRg S45 96,3
Error in line 4: GY9zqs1z A90 5,0
Error in line 8: HBb9AXGWXYa A90 92,8
Error in line 16: Ii9Q3WF A90 71,37
